# bitcoin-knowledge-base

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: ci.yml
bkb-core/: Cargo.toml
bkb-core/src/: bitcoin.rs  lib.rs  model.rs  schema.rs  store.rs
bkb-ingest/: Cargo.toml
bkb-ingest/src/: enrichment.rs  html_util.rs  lib.rs  metrics.rs  queue.rs  rate_limiter.rs  repo_cache.rs
bkb-ingest/src/sources/: bitcointalk.rs  commits.rs  delving.rs  github.rs  irc.rs  mail_archive.rs  mailing_list.rs  mod.rs  optech.rs  specs.rs
bkb-ingest/tests/: integration.rs
bkb-mcp/: Cargo.toml
bkb-mcp/src/: main.rs  remote_store.rs  tools.rs
bkb-server/: Cargo.toml
bkb-server/src/: api.rs  config.rs  dashboard.rs  examples.rs  landing.rs  main.rs  openapi.rs  privacy.rs  sources.rs
bkb-store/: Cargo.toml
bkb-store/src/: sqlite.rs
bkb-store/tests/: integration.rs
contrib/: bkb-server.service  deploy.sh  nginx-bkb.conf
docs/: DESIGN.md
