[workspace]
resolver = "2"
members = [
    "bkb-core",
    "bkb-ingest",
    "bkb-store",
    "bkb-server",
    "bkb-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
bkb-core = { path = "bkb-core" }
bkb-ingest = { path = "bkb-ingest" }
bkb-store = { path = "bkb-store" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Regex
regex = "1"

[profile.release]
lto = true
codegen-units = 1
