[workspace]
resolver = "2"
members = [
    "bkb-core",
    "bkb-ingest",
    "bkb-store",
    "bkb-server",
    "bkb-mcp",
]

[workspace.package]
version = "0.2.1"
authors = ["Elias Rohrer <dev@tnull.de>"]
edition = "2021"
rust-version = "1.85"
homepage = "https://bitcoinknowledge.dev"
repository = "https://github.com/tnull/bitcoin-knowledge-base"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
bkb-core = { version = "0.2.0", path ="bkb-core" }
bkb-ingest = { version = "0.2.0", path ="bkb-ingest" }
bkb-store = { version = "0.2.0", path ="bkb-store" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Regex
regex = "1"

# Git
git2 = "0.20"

[profile.release]
lto = true
codegen-units = 1
