[package]
name = "bkb-core"
description = "Shared types, traits, and schema definitions for the Bitcoin Knowledge Base"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
