[package]
name = "bkb-core"
description = "Shared types, traits, and schema definitions for the Bitcoin Knowledge Base"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["bitcoin", "lightning", "knowledge-base"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
