[package]
name = "bkb-mcp"
description = "MCP server for AI agent access to the Bitcoin Knowledge Base"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["bitcoin", "lightning", "knowledge-base", "mcp"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
bkb-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
async-trait = "0.1"
url = "2"
