[package]
name = "bkb-server"
description = "HTTP API server and ingestion scheduler for the Bitcoin Knowledge Base"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["bitcoin", "lightning", "knowledge-base", "api"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
bkb-core = { workspace = true }
bkb-ingest = { workspace = true }
bkb-store = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
openssl-probe = "0.1"
