[package]
name = "bkb-store"
description = "SQLite storage backend with FTS5 for the Bitcoin Knowledge Base"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["bitcoin", "lightning", "knowledge-base", "sqlite"]
categories = ["cryptography::cryptocurrencies", "database"]

[dependencies]
bkb-core = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
